--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\anaconda\\envs\\testo\\python.exe"
+    "python.pythonPath": "C:\\anaconda\\envs\\ml\\python.exe"
 }
