Added resnet tower config and bugfixes for human play vs model

--- a/experiments/first_night/first_config.yml
+++ b/experiments/first_night/first_config.yml
@@ -19,6 +19,7 @@ max_memory: 1000000
 max_samples_per_train: 2048
 num_workers: 8
 random_replacement: False
+restower_blocks: 6
 
 win_reward: 1
 mcst_steps: 400
