--- a/experiments/first/first_config.yml
+++ b/experiments/first/first_config.yml
@@ -19,6 +19,7 @@ max_memory: 1000000
 max_samples_per_train: 2048
 num_workers: 8
 random_replacement: False
+restower_blocks: 2
 
 win_reward: 1
 mcst_steps: 200
